<package>
    <name>dynamixel_controllers</name>
    <version>0.3.0</version>
    <description>
        This package contains a configurable node, services and a spawner script
        to start, stop and restart one or more controller plugins. Reusable
        controller types are defined for common Dynamixel motor joints. Both speed and
        torque can be set for each joint. This python package can be used by more
        specific robot controllers and all configurable parameters can be loaded
        via a yaml file.
    </description>

    <author>Antons Rebguns, Cody Jorgensen, Cara Slutter</author>
    <author>contradict</author>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>
    <url>https://github.com/contradict/dynamixel_motor</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_depend>dynamixel_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>dynamixel_driver</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dynamixel_msgs</run_depend>
</package>


