<package>
    <name>dynamixel_msgs</name>
    <version>0.3.0</version>
    <description>
        Common messages used throughout dynamixel_motor stack.
    </description>
    <author>Antons Rebguns</author>
    <author>contradict</author>
    <maintainer email="contradict@gmail.com">contradict</maintainer>
    <license>BSD</license>
    <url>https://github.com/contradict/dynamixel_motor</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
</package>


